# ctx-agent

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: AGENT_WORKFLOW.md  REAL_WORLD_MCP_VALIDATION.md
mcp-server/: package-lock.json  package.json  tsconfig.json
mcp-server/src/: index.ts
src/: cli.rs  lib.rs  main.rs
src/analyzer/: graph.rs  mod.rs  parser.rs  scanner.rs
src/analyzer/parser/: c_cpp.rs  go.rs  java_sharp.rs  mod.rs  python.rs  rust_ext.rs  scripting.rs  tests.rs  typescript.rs
src/commands/: blast_radius.rs  decisions.rs  grep.rs  init.rs  learn.rs  map.rs  mod.rs  query.rs  scan.rs  status.rs  warnings.rs  watch.rs
src/db/: decisions.rs  dependencies.rs  knowledge.rs  mod.rs  models.rs  schema.rs  search.rs  stats.rs
src/git/: history.rs  mod.rs
src/query/: blast.rs  mod.rs  search.rs
src/watcher/: mod.rs
