[package]
name = "ctx"
version = "0.1.0"
edition = "2021"
description = "Universal AI Agent Context Protocol — live codebase intelligence for AI agents"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Database (bundled includes FTS5 support)
rusqlite = { version = "0.31", features = ["bundled"] }

# Tree-sitter
tree-sitter = "0.24.5"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-java = "0.23"
# skipped kotlin/swift due to version mismatch
tree-sitter-php = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-bash = "0.23"

# Git
git2 = "0.18"

# File system
ignore = "0.4"
notify = "6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Output
colored = "2"

# Error handling
anyhow = "1"
blake3 = "1"
regex = "1"
grep-searcher = "0.1"
grep-regex = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }
